--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-dom": "^16.5.0",
+    "react-table": "^6.8.6"
   }
 }
