--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.5.0",
+    "react-chartkick": "^0.3.0",
     "react-dom": "^16.5.0",
     "react-table": "^6.8.6"
   }
