--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "/bin/bash sh/start.sh", 
-    "status": "/bin/bash sh/status.sh", 
+    "start": "/bin/bash sh/start.sh",
+    "status": "/bin/bash sh/status.sh",
     "stop": "/bin/bash sh/stop.sh"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "dependencies": {
     "bluebird": "^3.5.2",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "sqlite": "^3.0.0",
     "xml2js": "^0.4.19"
   }
